--- a/whichgame/templates/whichgame/game_list.html
+++ b/whichgame/templates/whichgame/game_list.html
@@ -68,7 +68,7 @@
                             class="absolute top-full left-0 mt-2 w-64 bg-slate-800 border border-slate-700 rounded-xl shadow-2xl z-50 p-4"
                             style="display: none;">
                             
-                            <form method="GET" x-ref="priceForm" x-data="{ price: '{{ request.GET.price|default:'60' }}' }">
+                            <form method="GET" x-ref="priceForm" x-data="{ price: '{{ request.GET.price|default:'50' }}' }">
                                 {% if request.GET.duration %}<input type="hidden" name="duration" value="{{ request.GET.duration }}">{% endif %}
                                 {% if request.GET.search %}<input type="hidden" name="search" value="{{ request.GET.search }}">{% endif %}
                                 {% if request.GET.platform %}<input type="hidden" name="platform" value="{{ request.GET.platform }}">{% endif %}
@@ -203,6 +203,11 @@
                         <span class="badge-blur text-green-300 bg-green-500/20">
                             <i class="fa-solid fa-star text-[10px]"></i> {{game.rating}}
                         </span>
+                        {% if game.release_year %}
+                        <span class="badge-blur text-slate-300 bg-slate-700/50">
+                            {{ game.release_year }}
+                        </span>
+                        {% endif %}
                         <span class="badge-blur text-blue-200 bg-slate-700/80">
                             <i class="fa-regular fa-clock text-[10px]"></i> {{game.playtime_main}}h
                         </span>
